First positive output from test/getlillyprint.c parsing real LDAP :)
./lillygetprint: Processing ldap/001-search-resentry-rejected.bin
Got SearchResultEntry
 - objectName ""
 - partialAttribute.type "supportedSASLMechanisms"
    - value "CRAM-MD5"
    - value "DIGEST-MD5"
    - value "NTLM"
    - value "GSSAPI"
./lillygetprint: End of file reached
./lillygetprint: Processing done

./lillygetprint: Processing ldap/101-bind-response.bin
Got BindResponse
 - resultCode in 1 bytes 00,04,00,04
 - matchedDN ""
 - diagnosticMessage ""
./lillygetprint: End of file reached
./lillygetprint: Processing done

./lillygetprint: Processing ldap/103-search-resentry.bin
Got SearchResultEntry
 - objectName "uid=rick,dc=openfortress,dc=nl"
./lillygetprint: End of file reached
./lillygetprint: Processing done

./lillygetprint: Processing ldap/104-search-resref.bin
Got SearchResultReference
 - URI "ldap://ldap.openfortress.nl/dc=openfortress,dc=nl??sub"
./lillygetprint: End of file reached
./lillygetprint: Processing done

Proper responses for attribute types in SearchResultEntry

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,7 +1,7 @@
 TARGETS=lillygetprint
 
 lillygetprint_OBJS = lillygetprint.o sillymem.o
-lillygetprint_LIBS = ../lib/mem.o ../lib/derbuf.o ../lib/dermsg.o ../lib/msgop.o ../lib/queue.o /usr/local/src/quick-der/lib/der_header.o /usr/local/src/quick-der/lib/der_unpack.o /usr/local/src/quick-der/lib/der_pack.o
+lillygetprint_LIBS = ../lib/mem.o ../lib/derbuf.o ../lib/dermsg.o ../lib/msgop.o ../lib/queue.o /usr/local/src/quick-der/lib/der_header.o /usr/local/src/quick-der/lib/der_unpack.o /usr/local/src/quick-der/lib/der_pack.o /usr/local/src/quick-der/lib/der_skipenter.o /usr/local/src/quick-der/lib/der_iterate.o
 
 OBJS = $(lillygetprint_OBJS)
 
