Added an operation array, overlaid with LillyPack_WhatEver data structures. The lillyget_operation() routine invokes a routine from the array, or reports errno=ENOSYS when the entry is NULL. Changed default-rejection and support_ flags to the opposite.
As an example of what a program now can do see test/lillydump.c:

static const LillyOpRegistry opregistry = {
        .by_name = {
                .BindRequest = lillyget_BindRequest,
                .BindResponse = lillyget_BindResponse,
                .SearchResultEntry = lillyget_SearchResultEntry,
                .SearchResultReference = lillyget_SearchResultReference,
        }
};

int lillyget_BindRequest (LDAP *lil,
                                LillyPool qpool,
                                const LillyMsgId msgid,
                                const LillyPack_BindRequest *br,
                                const dercursor controls) {
        printf ("Got BindRequest\n");
	...
        if (br->authentication.sasl.mechanism.derptr != NULL) {
                printf (" - SASL mechanism \"%.*s\"\n", br->authentication.sasl.
		...
	}
	...
	return 0;
}

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,6 +1,6 @@
 TARGETS=liblillydap.a liblillydap.so libsillymem.a libsillymem.so
 
-SUBTARGETS=msgop.tab mem.o queue.o sillymem.o derbuf.o dermsg.o msgop.o
+SUBTARGETS=msgop.tab mem.o queue.o sillymem.o derbuf.o dermsg.o msgop.o opswi.o
 
 # CFLAGS=-Os -ggdb3 -DDEBUG -I ../import/openpa-1.0.4/src
 CFLAGS=-O0 -ggdb3 -DDEBUG -I ../import/openpa-1.0.4/src
@@ -22,6 +22,9 @@ sillymem.o: sillymem.c
 	gcc $(CFLAGS) -c -I ../include -o "$@" "$<"
 
 msgop.o: msgop.c msgop.tab
+	gcc $(CFLAGS) -c -I ../include -o "$@" "$<"
+
+opswi.o: opswi.c
 	gcc $(CFLAGS) -c -I ../include -o "$@" "$<"
 
 mem.o: mem.c
