--- a/LillyDAP.pc.in
+++ b/LillyDAP.pc.in
@@ -1,11 +1,12 @@
 prefix=@CMAKE_INSTALL_PREFIX@
 exec_prefix=${prefix}
-includedir=${prefix}/include
-libdir=${exec_prefix}/lib
+includedir=${prefix}/include/lillydap
+libdir=${prefix}/lib
 
-Name: LillyDAP
+Name: lillydap
 Description: Little LDAP kernel: Event-based, lock-free, LDAP as storage RPC
-Version: 0.1.1
+Version: @LillyDAP_VERSION@
+URL: https://github.com/vanrein/lillydap
 Requires: Quick-DER
 Cflags: -I${includedir}
 Libs: -L${libdir} -llillydap
