Fixed the build of tests against Quick-DER over CMake's package descriptions

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -12,7 +12,7 @@ set_target_properties (
 target_link_libraries (
 	lillydump.test
 	lillydapStatic
-	${Quick-DER_STATIC_LIBRARIES}
+	${Quick-DER_LIBRARIES}
 )
 
 if (NOT ${BUILD_SINGLE_THREADED})
@@ -33,7 +33,7 @@ if (NOT ${BUILD_SINGLE_THREADED})
 	target_link_libraries (
 		stampede.test
 		lillydapStatic
-		${Quick-DER_STATIC_LIBRARIES}
+		${Quick-DER_LIBRARIES}
 		${CMAKE_THREAD_LIBS_INIT}	-lpthread
 	)
 endif()
@@ -50,7 +50,8 @@ set_target_properties (
 target_link_libraries (
 	lillypass.test
 	lillydapStatic
-	${Quick-DER_STATIC_LIBRARIES}
+	${Quick-DER_LIBRARIES}
+	#ORIG# ${Quick-DER_LIBRARIES}
 )
 
 file (GLOB netpkgs ldap/*.bin)
