Replaced zealously included msgop.tab into minimal structure Downside: used sh and sed to produce it; perhaps redo in Python one day?

--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -15,6 +15,7 @@ configure_file (setup.py.in ${CMAKE_CURRENT_BINARY_DIR}/setup.py @ONLY)
 add_custom_command (OUTPUT lillydap-shared-module-build
 			COMMAND python ${CMAKE_CURRENT_BINARY_DIR}/setup.py build
 			COMMAND python ${CMAKE_CURRENT_BINARY_DIR}/setup.py install --root ${CMAKE_CURRENT_BINARY_DIR}/lillydap --install-platlib .
+			DEPENDS opsize.h
 	)
 add_custom_target (lillydap-shared-module ALL
 		DEPENDS lillydap-shared-module-build)
@@ -22,6 +23,9 @@ add_custom_command (TARGET lillydap-shared-module
 	POST_BUILD
 	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/lillydap.py ${CMAKE_CURRENT_BINARY_DIR}/lillydap
 	)
+
+add_custom_command (OUTPUT opsize.h
+			COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/make_opsize_h.sh ${CMAKE_SOURCE_DIR}/lib/msgop.tab ${CMAKE_CURRENT_BINARY_DIR}/opsize.h )
 
 #OLD# install(FILES _quickder.so DESTINATION ${PYTHON_SITE_PACKAGES}/quick_der)
 
